[gd_scene load_steps=3 format=3 uid="uid://cb31f55b7luof"]

[ext_resource type="Script" path="res://gui/menu/main_menu.gd" id="1_dycj3"]

[sub_resource type="LabelSettings" id="LabelSettings_4rusx"]
font_size = 26

[node name="Menu" type="Control" node_paths=PackedStringArray("SERVER_IP_FIELD", "SERVER_PORT_FIELD", "MESSAGE_LABEL")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dycj3")
SERVER_IP_FIELD = NodePath("ContentContainer/FieldContainer/HostField")
SERVER_PORT_FIELD = NodePath("ContentContainer/FieldContainer/PortField")
MESSAGE_LABEL = NodePath("MessageLabel")

[node name="ContentContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.5
offset_top = -33.0
offset_right = 148.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="FieldContainer" type="BoxContainer" parent="ContentContainer"]
layout_mode = 2
alignment = 1

[node name="HostField" type="LineEdit" parent="ContentContainer/FieldContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
tooltip_text = "The server hostname or ip address (e.x: 127.0.0.1)"
placeholder_text = "Server host"
max_length = 30

[node name="PortField" type="LineEdit" parent="ContentContainer/FieldContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
tooltip_text = "The server hostname or ip address (e.x: 127.0.0.1)"
placeholder_text = "Port"
max_length = 5
select_all_on_focus = true

[node name="PlayButtonContainer" type="HBoxContainer" parent="ContentContainer"]
layout_mode = 2
alignment = 1

[node name="ConnectButton" type="Button" parent="ContentContainer/PlayButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect"

[node name="HostButton" type="Button" parent="ContentContainer/PlayButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host server"

[node name="QuitButton" type="Button" parent="ContentContainer"]
layout_mode = 2
text = "Quit game"

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_4rusx")
horizontal_alignment = 1

[connection signal="pressed" from="ContentContainer/PlayButtonContainer/ConnectButton" to="." method="on_connect_press"]
[connection signal="pressed" from="ContentContainer/PlayButtonContainer/HostButton" to="." method="on_host_press"]
[connection signal="pressed" from="ContentContainer/QuitButton" to="." method="on_quit_press"]
